# codility_tasks

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  codility_solutions.code-workspace
build_scripts/: build.bat
src/hello-world/: main.cpp
